# Factory_MARL_Project

./: .dockerignore  .gitattributes  .gitignore  README.md  compose.yaml
configs/: mappo_config.yaml
core/: Dockerfile  README.md  environment.yml
core/ros2/factory_core/: package.xml  setup.cfg  setup.py
core/ros2/factory_core/factory_core/: __init__.py  control_node.py  state_mirror.py  visualization_node.py
docs/architecture/: 0_system_overview.md  10_marl_interface_spec.md  10_ros2_sim_core_topics.md  11_core_visualization.md  12_runtime_environments.md  13_stable_motion_baseline.md  1_modules.md  2_data_flow.md  (+12 more)
locomotion/: Dockerfile  README.md  environment.yml  locomotion_service.py
marl/: README.md  environment.yml  marl_service.py
navdp/: Dockerfile  README.md  environment.yml  navdp_service.py
output/: legacy_20s.avi  simulation_rewrite_monitor.avi
perception/: Dockerfile  README.md  environment.yml  perception_service.py  requirements.txt
ros2/: README.md  environment.yml
ros2/factory_bringup/: package.xml  setup.cfg  setup.py
ros2/factory_bringup/factory_bringup/: __init__.py
ros2/factory_bringup/launch/: core_dashboard.launch.py  sim_core_mock.launch.py
scripts/: analyze_subgoals.py  debug_policy.py  eval_mappo.py  interactive_demo.py  launch_core_dashboard.sh  launch_locomotion.sh  launch_marl.sh  launch_navdp.sh  launch_perception.sh  launch_simulation.sh  launch_simulation_perception_env.sh  launch_simulation_rewrite.sh  replay_perception_record.py  train_mappo.py
simulation/: Dockerfile.headless  README.md
tests/: test_env.py
(+365 files in other folders)
