<?xml version="1.0"?>
<package format="3">
  <name>factory_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Factory MARL ROS2 integration.</description>
  <maintainer email="yyz@example.com">yyz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>factory_core</exec_depend>
  <exec_depend>factory_sim_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
