<?xml version="1.0"?>
<package format="3">
  <name>factory_core</name>
  <version>0.1.0</version>
  <description>Core control layer for Factory MARL ROS2 integration.</description>
  <maintainer email="yyz@example.com">yyz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
